refactor(service/dao): ♻️ 重构框架服务和告警组相关功能
重构 FrameServiceMapper、AlertGroupMapper 及相关服务层，主要变更包括：
1. 使用 QueryWrapper 替代 QueryChain 实现查询功能
2. 为所有 mapper 添加标准的 CRUD 操作方法
3. 调整接口返回值类型，移除 Result 包装
4. 新增多个便捷查询方法，如按框架ID排序查询、批量ID查询等
5. 统一文档注释格式，更新作者信息
6. 优化告警组分页查询实现

调整相关服务层实现以适配 mapper 变更，提高代码可维护性和一致性

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>